converted to module + wall asset

--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Raycaster</title>
-    <script src="node_modules/pixi.js/dist/browser/pixi.js"></script>
-    <script src="app.js"></script>
 </head>
 <body>
+    <script src="app.js" type="module"></script>
 </body>
 </html>
