--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src="app.js" type="module"></script>
+    <script src="js/app.js" type="module"></script>
 </body>
 </html>
