--- a/renderer/index.html
+++ b/renderer/index.html
@@ -6,6 +6,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="title-bar">
+        <div class="draggable"></div>
+        <div class="btns">
+            <div class="btn minimize">&minus;</div>
+            <div class="btn exit">&#10006;</div>
+        </div>
+    </div>
     <script src="js/app.js" type="module"></script>
+    <div id="page"></div>
 </body>
 </html>
